--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html{
     text-align: center;
     background: url("../img/background.gif") no-repeat;
     background-size: cover;
+    background-position: center;
     color: white;
 
 }
