--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,21 @@ a{
     padding: 5px;
 }
 
+.game .btn2 {
+    font-family: 'Orbitron', sans-serif;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 30px;
+
+    border: 1px solid white;
+    box-shadow:  0 0 5px white,  0 0 5px #0bf4f3 inset;
+    color: white;
+    background-color: transparent;
+    border-radius: 5px;
+    padding: 5px;
+}
+
 .back{
     color: white;
     position: absolute;
