--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html{
     font-family: 'Orbitron', sans-serif;
     
     text-align: center;
-    background: url("../img/background.gif") no-repeat;
+    background: url("../img/background.gif") no-repeat center;
     background-size: cover;
     color: white;
 }
