--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ a{
 }
 .back{
     color: white;
-    position: absolute;
+    position: fixed;
     bottom: 1vh;
     left: 1vw;
     font-size: 46px;
