--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,13 @@ html{
     background: url("../img/background.gif") no-repeat center;
     background-size: cover;
     color: white;
+    
+    overscroll-behavior: contain;
 }
 #index,#creators, #tutorial, #win, #soon, .watchout .game{
 
     height: 100vh;
     overflow: hidden;
-    overscroll-behavior-y: contain;
     
 }
 
