--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ html{
     background: url("../img/background.gif") no-repeat center;
     background-size: cover;
     color: white;
+}
+body {
     overscroll-behavior: contain;
 }
 #index,#creators, #tutorial, #win, #soon, .watchout .game{
