--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html{
 body {
     overscroll-behavior: contain;
 }
-#index,#creators, #tutorial, #win, #soon, .watchout .game{
+#index,#creators, #tutorial, #win, #soon, .watchout, .game{
 
     height: 100vh;
     overflow: hidden;
